--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sgstatus"
 version = "0.1.0"
 authors = ["David McKinney <mckinney@subgraph.com>"]
+homepage = "https://github.com/subgraph/sgstatus"
 
 [dependencies]
 dbus = "0.6.1"
